# Django-from-first-principles

./: .gitignore  LICENSE  README.md  pyproject.toml
bml_project/: blogmaker_lite.py  generate_sample_data.py  model_factories.py  pyproject.toml  settings.py
bml_project/accounts/: urls.py  views.py
bml_project/accounts/templates/registration/: login.html  register.html
bml_project/blogs/: admin.py  models.py  views.py
bml_project/blogs/migrations/: 0001_initial.py  0002_blogpost.py
bml_project/blogs/templates/blogs/: base.html  blog.html  blogs.html  index.html  post.html
bml_project/templates/: base.html  blog.html  blogs.html  index.html  post.html
