[tool.poetry]
name = "django-from-first-principles"
version = "0.1.0"
description = ""
authors = ["Jiang Zhichao <zhichao.jiang@bebit.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
